- Please report any issue!

-----------------------------------------------------------------------
 VERSION 0.5.x
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.5.x

Updates:
- ImGui:           	Upgraded to v1.79
- ImGuiFileDialog: 	Upgraded to v0.5.1

Fixes:
- start_dearpygui:     	Is now protected from trying to create a new dearpygui instance before closing the last one issue#289

-----------------------------------------------------------------------
 VERSION 0.5.0 (10/20/2020)
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.5.0

Breaking Changes:
- show_source: "show_source" removed to prepare for text editor widget in 0.6

Updates:
- Standard Windows: metrics/debug/about/style/docs etc. are truely widgets now.
- MacOs:            minimum now Mojava

New Commands:
- Misc: Added "set_managed_column_width" command
- Misc: Added "get_managed_column_width" command
- Misc: Added "add_character_remap" command
- Misc: Added "set_primary_window" command
- Misc: Added "add_metrics_window" command
- Misc: Added "add_debug_window" command
- Misc: Added "add_about_window" command
- Misc: Added "add_style_window" command
- Misc: Added "add_documentation_window" command

New Keywords:
- start_dearpygui:    Added "primary_window" keyword
- add_checkbox:		  Added "enabled" keyword
- add_radio_button:   Added "enabled" keyword
- add_listbox:		  Added "enabled" keyword
- add_combo:		  Added "enabled" keyword
- add_input_text:	  Added "enabled" keyword
- add_input_int:	  Added "enabled" keyword
- add_input_int2:	  Added "enabled" keyword
- add_input_int3:	  Added "enabled" keyword
- add_input_int4:	  Added "enabled" keyword
- add_input_float:	  Added "enabled" keyword
- add_input_float2:	  Added "enabled" keyword
- add_input_float3:	  Added "enabled" keyword